removed extra space and made double quotes to single quote correction

--- a/scss/foundation.scss
+++ b/scss/foundation.scss
@@ -6,7 +6,7 @@
  */
 
 // Dependencies
-@import "../_vendor/normalize-scss/sass/normalize";
+@import '../_vendor/normalize-scss/sass/normalize';
 @import '../_vendor/sassy-lists/stylesheets/helpers/missing-dependencies';
 @import '../_vendor/sassy-lists/stylesheets/helpers/true';
 @import '../_vendor/sassy-lists/stylesheets/functions/purge';
@@ -17,7 +17,7 @@
 // Settings
 // import your own `settings` here or
 // import and modify the default settings through
-// @import "settings/settings";
+// @import 'settings/settings';
 
 // Sass utilities
 @import 'util/util';
@@ -76,7 +76,7 @@
   @else {
     @include foundation-flex-grid;
   }
-  @include foundation-typography;  
+  @include foundation-typography;
   @include foundation-forms;
   @include foundation-button;
   @include foundation-accordion;
